rect and vector_2 added, tilemap_ops object added, imgui_inc added wrapped imgui call in debug only wrapper IMGUI_CALL()

--- a/graphics.vcxproj
+++ b/graphics.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="imgui.h" />
     <ClInclude Include="imgui_impl_dx11.h" />
     <ClInclude Include="imgui_impl_win32.h" />
+    <ClInclude Include="imgui_inc.h" />
     <ClInclude Include="win32_imgui_init.h" />
     <ClInclude Include="imgui_internal.h" />
     <ClInclude Include="imstb_rectpack.h" />
